Main Commit to main

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     --dark-gray: #434345;
 }
 footer {
-    background-image: url("/images/back.PNG");
+    background-image: url("images/back.PNG");
    
    }
 body {
